--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,11 @@ services:
     name: bistropulse_backend
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn backend.wsgi:application
+    startCommand: |
+      python manage.py migrate &&
+      python manage.py collectstatic --noinput &&
+      gunicorn backend.wsgi:application
+
     envVars:
       - key: DJANGO_SECRET_KEY
         generateValue: true
