--- a/render.yaml
+++ b/render.yaml
@@ -13,3 +13,7 @@ services:
         generateValue: true
       - key: DEBUG
         value: False
+    routes:
+      - type: rewrite
+        source: /media/(.*)
+        destination: /media/$1
