--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,6 @@ services:
       python manage.py migrate &&
       python manage.py collectstatic --noinput &&
       gunicorn backend.wsgi:application
-
     envVars:
       - key: DJANGO_SECRET_KEY
         generateValue: true
@@ -17,3 +16,6 @@ services:
       - type: rewrite
         source: /media/(.*)
         destination: /media/$1
+      - type: rewrite
+        source: /static/(.*)
+        destination: /static/$1
